package cn.thinkinjava.design.pattern.behavior.mediator.frame;

/**
 * @author qiuxianbao
 * @date : 2023/1/11
 */
public abstract class Mediator {
    public abstract void colleagueChanged(Colleague c);
}
